--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </ul>
         </div>
         <div class="d-none d-md-block">
-          <p class="navbar-text mr-auto mr-2">
+          <p class="navbar-text my-auto mr-2">
             <i>Great whiskey delivered to your door!</i>
           </p>
           <a href="/login" class="btn btn--cta btn--red">Sign In / Sign Up</a>
