fixed broken image links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div class="container-fluid navalert-container">
@@ -136,7 +136,7 @@
             <div class="media">
               <div class="d-none d-sm-block">
                 <img
-                  src="images/girl-image.png"
+                  src="assets/images/girl-image.png"
                   alt="girl"
                   class="rounded-circle mr-3"
                   height="100"
@@ -158,7 +158,7 @@
             <div class="media">
               <div class="d-none d-sm-block">
                 <img
-                  src="images/guy-image.png"
+                  src="assets/images/guy-image.png"
                   alt="girl"
                   class="rounded-circle mr-3"
                   height="100"
